src/test/resources/query/error/queryWithOrderByIndexOnFieldThatIsInaccessibleFromSchemaType/schema.graphqls
type Film implements Node @table {
  id: ID!
  title: String!
}

type FilmConnection {
  edges: [FilmConnectionEdge]
  pageInfo: PageInfo
  nodes: [Film!]!
}

type FilmConnectionEdge {
  cursor: String
  node: Film
}

type Query {
  films(releaseYear: String! @field(name : "RELEASE_YEAR"), orderBy: FilmOrder @orderBy, first: Int = 100, after: String): FilmConnection
}

input FilmOrder {
  direction: OrderDirection!
  orderByField: FilmOrderByField!
}

enum FilmOrderByField {
  LANGUAGE @index(name : "IDX_FK_LANGUAGE_ID") #language_id field is not accessible from the Film type. This field can thus not be used for pagination
  TITLE @index(name : "IDX_TITLE")
}